--- a/package.json
+++ b/package.json
@@ -85,6 +85,51 @@
     "text-annotation"
   ],
   "dependencies": {
+    "@jup-ag/whirlpool-sdk": "0.1.1",
+    "@material-ui/core": "4.12.4",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.56",
+    "@mdi/js": "^5.3.45",
+    "@mdi/react": "^1.4.0",
+    "@react-md/material-icons": "^2.1.0",
+    "acorn": "^7.3.1",
+    "axios": "^0.19.2",
+    "blob-util": "^2.0.2",
+    "cornerstone-core": "^2.3.0",
+    "cornerstone-file-image-loader": "^0.3.0",
+    "cornerstone-math": "0.1.10",
+    "cornerstone-tools": "^4.18.1",
+    "cornerstone-wado-image-loader": "4.2.1",
+    "cornerstone-web-image-loader": "^2.1.1",
+    "daikon": "^1.2.42",
+    "dexie": "3.2.2",
+    "dicom-parser": "^1.8.5",
+    "file-saver": "^2.0.2",
+    "gh-pages": "^3.1.0",
+    "hammerjs": "^2.0.8",
+    "jszip": "^3.5.0",
+    "lodash": "^4.17.19",
+    "lodash.template": "^4.5.0",
+    "material-table": "^1.66.0",
+    "mathjs": "^7.1.0",
+    "react": "^16.13.1",
+    "react-device-detect": "^1.13.1",
+    "react-dom": "^16.13.1",
+    "react-icons": "^3.10.0",
+    "react-perfect-scrollbar": "^1.5.8",
+    "react-redux": "^7.2.0",
+    "react-resize-detector": "^4.2.3",
+    "react-rnd": "^10.1.10",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.1",
+    "react-scroll-wheel-handler": "^1.1.5",
+    "redux": "^4.0.5",
+    "serialize-javascript": "^3.1.0",
+    "set-value": "3.0.2",
+    "three": "^0.118.3",
+    "uuid": "^8.2.0",
+    "webfontloader": "^1.6.28",
     "@babel/plugin-proposal-private-methods": "^7.18.6",
     "@martel/audio-file-decoder": "2.3.15",
     "@thi.ng/rle-pack": "^2.1.6",
